# Chess

./: .gitignore  CHANGELOG.md  README_DEV.md  assets.py  board.py  constants.py  game.py  game_state.py  input_handler.py  pieces.py  player.py  pyproject.toml  renderer.py  rules_engine.py
tests/: test_golden_master.py
